--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Tapper-TestSuite-Netperf
 
+4.1.0     2012-10-21
+        - sync with release version
+
 4.0.1     2012-05-16
         - Restructure TAP output
         - big Dist::Zilla roundhouse kick
