--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Tapper-TestSuite-Netperf
 
+4.1.1     2012-11-20
+        - dzil pluginbundle TAPPER
+
 4.1.0     2012-10-21
         - sync with release version
 
